# kimi-rcli

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  NOTICE  README.md  SECURITY.md
.github/workflows/: ci.yml  release.yml
crates/kaos-rs/: Cargo.toml
crates/kaos-rs/src/: error.rs  exec.rs  lib.rs  path.rs  stream.rs
crates/kimi-cli/: Cargo.toml
crates/kimi-cli/src/: app.rs  cli.rs  lib.rs  main.rs
crates/kimi-cli/src/commands/: login.rs  mcp.rs  mod.rs  setup.rs
crates/kimi-cli/src/ui/: mod.rs  print.rs  shell.rs
crates/kimi-core/: Cargo.toml
crates/kimi-core/src/: approval.rs  config.rs  context.rs  lib.rs  session.rs  types.rs  wire.rs  wire_channel.rs
crates/kimi-core/src/auth/: manager.rs  mod.rs  oauth.rs  platforms.rs  storage.rs
crates/kimi-core/src/llm/: mod.rs
crates/kimi-core/src/prompts/: mod.rs
crates/kimi-core/src/skill/: discovery.rs  flow.rs  frontmatter.rs  mod.rs
crates/kimi-core/src/soul/: agent.rs  chat.rs  compaction.rs  denwarenji.rs  kimisoul.rs  mod.rs  slash.rs  toolset.rs
crates/kimi-tools/: Cargo.toml
crates/kimi-tools/src/: lib.rs  shell.rs  task.rs  todo.rs
crates/kimi-tools/src/file/: glob.rs  grep.rs  mod.rs  read.rs  replace.rs  write.rs
crates/kimi-tools/src/web/: fetch.rs  mod.rs  search.rs
crates/kosong-rs/: Cargo.toml
crates/kosong-rs/src/: lib.rs  message.rs
crates/kosong-rs/src/chat_provider/: kimi.rs  mod.rs  openai.rs
crates/kosong-rs/src/tooling/: mod.rs
docs/: IMPLEMENTATION_SUMMARY.md  PORTING.md  SLASH_COMMANDS.md  TECH_SPEC.md
