[workspace]
members = [
    "crates/kosong-rs",
    "crates/kaos-rs",
    "crates/kimi-core",
    "crates/kimi-tools",
    "crates/kimi-cli",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
authors = ["Kimi CLI Contributors"]
license = "Apache-2.0"
repository = "https://github.com/yourusername/kimi-rcli"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.43", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt", "codec"] }
futures = "0.3"
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"

# HTTP/Networking
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"] }
axum = { version = "0.8", features = ["ws"] }
tower = "0.5"
tower-http = "0.6"

# CLI
clap = { version = "4.5", features = ["derive", "env"] }
reedline = "0.39"
nu-ansi-term = "0.50"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Logging/tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# Utilities
uuid = { version = "1.13", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
regex = "1.11"
glob = "0.3"
walkdir = "2.5"
dirs = "6.0"
which = "7.0"
tempfile = "3.16"

# Secrets
secrecy = { version = "0.8", features = ["serde"] }

# Workspace crates
kosong-rs = { path = "crates/kosong-rs" }
kaos-rs = { path = "crates/kaos-rs" }
kimi-core = { path = "crates/kimi-core" }
kimi-tools = { path = "crates/kimi-tools" }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0
debug = true
