[package]
name = "kaos-rs"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "OS abstraction layer for async file operations and command execution"

[dependencies]
tokio = { version = "1.35", features = ["fs", "process", "io-util", "rt", "macros"] }
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
tracing = "0.1"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.9"
