[package]
name = "kimi-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Kimi CLI - Your next CLI agent"

[dependencies]
# CLI parsing
clap = { workspace = true }

# Interactive shell
reedline = "0.39"
nu-ansi-term = { workspace = true }

# Async runtime
tokio = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Workspace dependencies
kimi-core = { path = "../kimi-core" }
kimi-tools = { path = "../kimi-tools" }
kosong-rs = { path = "../kosong-rs" }
kaos-rs = { path = "../kaos-rs" }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Utils
dirs = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
uuid = { workspace = true }

# Browser opener for OAuth
open = "5"

[dev-dependencies]
tempfile = { workspace = true }
