[package]
name = "kimi-tools"
version = "0.1.0"
edition = "2021"
authors = ["Kimi Team"]
description = "Built-in tools for the Kimi CLI agent"

[dependencies]
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["fs", "process", "rt"] }
regex = "1.0"
glob = "0.3"
reqwest = { version = "0.12", features = ["json"] }
thiserror = "1.0"

kimi-core = { path = "../kimi-core" }
kaos-rs = { path = "../kaos-rs" }

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.0"
