[package]
name = "kosong-rs"
version = "0.1.0"
edition = "2021"
authors = ["Kimi CLI Team"]
description = "An LLM abstraction layer for AI agent applications"
license = "MIT"
repository = "https://github.com/moonshot-ai/kimi-rcli"
keywords = ["llm", "ai", "chat", "kimi", "openai"]
categories = ["api-bindings", "asynchronous", "web-programming"]

[dependencies]
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json", "stream"] }
bytes = "1.0"
futures = "0.3"
thiserror = "1.0"
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1.0", features = ["rt", "macros"] }
