[package]
name = "kosong-rs"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "An LLM abstraction layer for AI agent applications"

[dependencies]
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json", "stream"] }
bytes = "1.0"
futures = "0.3"
thiserror = "1.0"
tracing = "0.1"
uuid = { version = "1.0", features = ["v4"] }
dirs = "6.0"
hostname = "0.4"
sysinfo = "0.33"

[dev-dependencies]
tokio = { version = "1.0", features = ["rt", "macros"] }
